--- a/demo/demo.html
+++ b/demo/demo.html
@@ -118,7 +118,7 @@ speechSynthesis.speak(msg);
 </code></pre>
         <p>除了英文，我们还可以使用其他语言</p>
          <h4>
-             <button type="button" class="btn btn-primary js-speack-japanese">speack 'おはようございます'</button>
+             <button type="button" class="btn btn-primary js-speack-japanese">speak 'おはようございます'</button>
              <button type="button" class="btn btn-default js-speack-chinese">说出“美国队长”</button>
         
         </h4>
